--- a/static-webapp.config.json
+++ b/static-webapp.config.json
@@ -5,7 +5,7 @@
       "rewrite": "https://myapi-bubycqeyg2awapd6.northeurope-01.azurewebsites.net/api/*"
     },
     {
-      "route": "/MazeRunner/*",
+      "route": "/MazeRunner.html",
       "serve": "/MazeRunner.html"
     }
   ],
@@ -14,4 +14,3 @@
     ".wasm": "application/wasm"
   }
 }
-  
