--- a/static-webapp.config.json
+++ b/static-webapp.config.json
@@ -3,6 +3,11 @@
     {
       "route": "/MazeRunner.html",
       "serve": "/MazeRunner.html"
+    },
+    {
+      "route": "/*",
+      "serve": "/index.html",
+      "statusCode": 200
     }
   ],
   "mimeTypes": {
